--- a/index.html
+++ b/index.html
@@ -34,12 +34,17 @@
       <section class="sectionSwiper">
         <div class="nav__items">
           <div class="nav__block">
-            <img src="images/burger.svg" alt="" class="nav__items_menu">
             <img src="images/logo.svg" alt="" class="">
           </div>
-          <div class="nav__items_cart">
-            <img class="JS__openCartModal" src="images/Cart White.png" alt="">
-            <div class="counter">1</div>
+          <div style="display: flex; align-items: center;">
+
+            <div class="nav__items_cart">
+              <img class="JS__openCartModal" src="images/Cart White.png" alt="">
+              <div class="counter">1</div>
+
+            </div>
+            <img src="images/burger.svg" alt="" class="nav__items_menu" style="width: 21px;">
+
           </div>
         </div>
         <div class="sectionSwiper__nav">
@@ -48,7 +53,7 @@
           </div>
         </div>
         <div id="mySwiper" class="swiper-container">
-          <div class="sectionSwiper__nav_rec">Nike Clearance Sale</div>
+          <div class="sectionSwiper__nav_rec" style="background: #ED6E00;">Nike Clearance Sale</div>
           <img id="fullscreenIcon" src="./images/full-screen.png" style="z-index: 999;
           max-width: 30px;
           position: absolute;
@@ -137,16 +142,24 @@
   <div class="container"></div>
   </section>
   <div class="container">
-    <a class="btnBlcok btnBlcok-2 JS__addToCart">
-      <div class="btnBlcok__text-2">add to cart</div>
-    </a>
-    <a href="#" class="btnBlcok">
-      <div class="btnBlcok__flex">
-        <span class="btnBlcok__flex_oldPrice">£109</span>
-        <span class="btnBlcok__flex_newPrice">£9</span>
-      </div>
-      <div class="btnBlcok__text">buy now</div>
-    </a>
+    <div style="display: flex; justify-content: center;">
+      <a class="btnBlcok btnBlcok-2 JS__addToCart">
+        <div class="btnBlcok__text-2">add to cart</div>
+      </a>
+
+    </div>
+
+    <div style="display: flex; justify-content: center;">
+      <a href="#" class="btnBlcok">
+        <div class="btnBlcok__flex">
+          <span class="btnBlcok__flex_oldPrice">£109</span>
+          <span class="btnBlcok__flex_newPrice">£9</span>
+        </div>
+        <div class="btnBlcok__text">buy now</div>
+      </a>
+
+    </div>
+
     <!-- <p class="inf__text">Free Delivery to the USA 🇺🇸</p> -->
     <div class="limited">
       <p>limited offer</p>
@@ -295,12 +308,95 @@
   <section class="sectionReviews">
     <div class="container">
       <h1 class="sectionReviews__title">Reviews</h1>
-      <div class="sectionReviews__writeReview">
+
+      <div class="rating-snapshot">
+        <p>
+          Rating Snapshot
+        </p>
+        <p>
+          Select a row below to filter reviews.
+        </p>
+      </div>
+      <div class="progressbar">
+        <div class="progressbar1">
+          <p class="rating-snapshot2">
+            5 stars
+
+          </p>
+          <div class="progress-bar">
+            <div class="progress-fill" style=" width: 80%;   "></div>
+          </div>
+          <p class="rating-snapshot2">
+            8
+
+          </p>
+        </div>
+        <div class="progressbar1">
+          <p class="rating-snapshot2">
+            4 stars
+
+          </p>
+          <div class="progress-bar">
+            <div class="progress-fill" style=" width: 20%;   "></div>
+          </div>
+          <p class="rating-snapshot2">
+            2
+
+          </p>
+        </div>
+        <div class="progressbar1">
+          <p class="rating-snapshot2">
+            3 stars
+
+          </p>
+          <div class="progress-bar">
+            <div class="progress-fill" style=" width: 0%;   "></div>
+          </div>
+          <p class="rating-snapshot2">
+            0
+
+          </p>
+        </div>
+        <div class="progressbar1">
+          <p class="rating-snapshot2">
+            1 stars
+
+          </p>
+          <div class="progress-bar">
+            <div class="progress-fill" style=" width: 0%;   "></div>
+          </div>
+          <p class="rating-snapshot2">
+            0
+
+          </p>
+        </div>
+
+      </div>
+
+      <div class="rating-snapshot">
+        <p>
+          Overall Rating
+        </p>
+
+      </div>
+      <div class="reviewss">
+        <h2>
+          4.8
+        </h2>
+        <div>
+          <img src="images/rate_stars.svg" alt="">
+          <p style="color: orange;">
+            Overall Rating
+          </p>
+
+        </div>
+      </div>
+      <!-- <div class="sectionReviews__writeReview">
         <div class="sectionReviews__writeReview_rate">
           <img src="images/rate_stars.svg" alt="">
           <h3>based on 181 trustpilot reviews</h3>
         </div>
-      </div>
+      </div> -->
       <div class="riviews">
         <div class="review">
           <img class="review__img" src="images/comment1.webp" alt="">
@@ -443,7 +539,17 @@
           <input class="footer__form_input" type="email" placeholder="E-mail">
           <br>
           <button class="footer__form_btn" type="submit">
-            SUBSCRIBE
+
+            <div>
+              <span>
+                <p>SUBSCRIBE</p>
+              </span>
+            </div>
+            <div>
+              <span>
+                <p>SUBSCRIBE</p>
+              </span>
+            </div>
           </button>
         </form>
       </div>
@@ -504,7 +610,7 @@
   </div>
   </main>
 
-  <div class="modal modal--all container">
+  <div class="modal modal--all container" style="max-width: 400px;">
     <nav class="">
       <div class="wrapper">
         <div class="nav__items">
