--- a/index.html
+++ b/index.html
@@ -162,7 +162,6 @@
 
     <!-- <p class="inf__text">Free Delivery to the USA 🇺🇸</p> -->
     <div class="limited">
-      <p>limited offer</p>
       <span class="timer" id="timer">00:21:16</span>
     </div>
     <div class="chooseCard">
@@ -307,90 +306,94 @@
   </section>
   <section class="sectionReviews">
     <div class="container">
-      <h1 class="sectionReviews__title">Reviews</h1>
+      <div class="container" style="background-color: #f4f3ef; padding: 20px 15px; border-radius: 15px;">
 
-      <div class="rating-snapshot">
-        <p>
-          Rating Snapshot
-        </p>
-        <p>
-          Select a row below to filter reviews.
-        </p>
-      </div>
-      <div class="progressbar">
-        <div class="progressbar1">
-          <p class="rating-snapshot2">
-            5 stars
+        <h1 class="sectionReviews__title">Reviews</h1>
 
+        <div class="rating-snapshot">
+          <p>
+            Rating Snapshot
           </p>
-          <div class="progress-bar">
-            <div class="progress-fill" style=" width: 80%;   "></div>
-          </div>
-          <p class="rating-snapshot2">
-            8
-
+          <p>
+            Select a row below to filter reviews.
           </p>
         </div>
-        <div class="progressbar1">
-          <p class="rating-snapshot2">
-            4 stars
+        <div class="progressbar">
+          <div class="progressbar1">
+            <p class="rating-snapshot2">
+              5 stars
 
-          </p>
-          <div class="progress-bar">
-            <div class="progress-fill" style=" width: 20%;   "></div>
+            </p>
+            <div class="progress-bar">
+              <div class="progress-fill" style=" width: 80%;   "></div>
+            </div>
+            <p class="rating-snapshot2">
+              8
+
+            </p>
           </div>
-          <p class="rating-snapshot2">
-            2
+          <div class="progressbar1">
+            <p class="rating-snapshot2">
+              4 stars
 
-          </p>
-        </div>
-        <div class="progressbar1">
-          <p class="rating-snapshot2">
-            3 stars
+            </p>
+            <div class="progress-bar">
+              <div class="progress-fill" style=" width: 20%;   "></div>
+            </div>
+            <p class="rating-snapshot2">
+              2
 
-          </p>
-          <div class="progress-bar">
-            <div class="progress-fill" style=" width: 0%;   "></div>
+            </p>
           </div>
-          <p class="rating-snapshot2">
-            0
+          <div class="progressbar1">
+            <p class="rating-snapshot2">
+              3 stars
 
-          </p>
-        </div>
-        <div class="progressbar1">
-          <p class="rating-snapshot2">
-            1 stars
+            </p>
+            <div class="progress-bar">
+              <div class="progress-fill" style=" width: 0%;   "></div>
+            </div>
+            <p class="rating-snapshot2">
+              0
 
-          </p>
-          <div class="progress-bar">
-            <div class="progress-fill" style=" width: 0%;   "></div>
+            </p>
           </div>
-          <p class="rating-snapshot2">
-            0
+          <div class="progressbar1">
+            <p class="rating-snapshot2">
+              1 stars
 
-          </p>
+            </p>
+            <div class="progress-bar">
+              <div class="progress-fill" style=" width: 0%;   "></div>
+            </div>
+            <p class="rating-snapshot2">
+              0
+
+            </p>
+          </div>
+
         </div>
 
-      </div>
-
-      <div class="rating-snapshot">
-        <p>
-          Overall Rating
-        </p>
-
-      </div>
-      <div class="reviewss">
-        <h2>
-          4.8
-        </h2>
-        <div>
-          <img src="images/rate_stars.svg" alt="">
-          <p style="color: orange;">
+        <div class="rating-snapshot">
+          <p>
             Overall Rating
           </p>
 
         </div>
+        <div class="reviewss">
+          <h2>
+            4.8
+          </h2>
+          <div>
+            <img src="images/rate_stars.svg" alt="">
+            <p style="color: orange;">
+              Overall Rating
+            </p>
+
+          </div>
+        </div>
       </div>
+
       <!-- <div class="sectionReviews__writeReview">
         <div class="sectionReviews__writeReview_rate">
           <img src="images/rate_stars.svg" alt="">
