--- a/index.html
+++ b/index.html
@@ -306,7 +306,8 @@
   </section>
   <section class="sectionReviews">
     <div class="container">
-      <div class="container" style="background-color: #f4f3ef; padding: 20px 15px; border-radius: 15px;">
+      <div class="container"
+        style="background-color: #f4f3ef; padding: 20px 15px; border-radius: 15px; margin-bottom: 20px;">
 
         <h1 class="sectionReviews__title">Reviews</h1>
 
