--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="nav__block">
             <img src="images/logo.svg" alt="" class="">
           </div>
-          <div style="display: flex; align-items: center;">
+          <div style="display: flex; align-items: center; gap:10px">
 
             <div class="nav__items_cart">
               <img class="JS__openCartModal" src="images/Cart White.png" alt="">
@@ -191,12 +191,14 @@
       <!-- </a> -->
     </div>
   </div>
-  <div class="container">
-    <div class="accordion">
+  <div class="container"
+    style="background: linear-gradient(1turn,#cc1e3b -44.49%,#ff8646 157.84%); border-radius: 10px;">
+    <div class="accordion"
+      style="display: flex; flex-wrap: wrap;justify-content: space-between; background: transparent; color: white;padding: 20px; ">
       <div class="accordion__item">
         <div class="accordion__header">
-          <img class="accordion__img" src="images/setting.svg" alt="">
-          <p>Detailed feautures &amp; specifications</p>
+          <img class="accordion__img" src="images/settings (1).png" alt="">
+          <p>Detailed feautures <br> &amp; specifications</p>
         </div>
         <div class="accordion__body">
           <div class="accordion__body_description">
@@ -214,24 +216,28 @@
         </div>
       </div>
       <div class="accordion__item iconColor">
-        <div class="accordion__advantages">
-          <img class="accordion__img" src="images/car_icon.svg" alt="">
+        <div class="accordion__advantages2">
+          <img class="accordion__img" src="images/fast-delivery (1).png" alt="">
           <p>Free DHL shipping</p>
         </div>
       </div>
-      <div class="accordion__item">
-        <div class="accordion__advantages">
-          <img class="accordion__img" src="images/safe_icon.svg" alt="">
-          <p>100% money-back guarantee</p>
-        </div>
-      </div>
-      <div class="accordion__item">
-        <div class="accordion__advantages">
-          <img class="accordion__img" src="images/box_icon.svg" alt="">
-          <p>1 year warranty, no questions asked</p>
-        </div>
-      </div>
+
       <!-- <a href="#" class="accordion__link">View our Delivery &amp; Returns Policy</a> -->
+    </div>
+    <div class="accordion"
+      style="display: flex;flex-wrap: wrap;background: transparent; justify-content: space-between; color: white; padding: 20px; ">
+      <div class="accordion__item">
+        <div class="accordion__advantages2">
+          <img class="accordion__img" src="images/u-turn.png" alt="">
+          <p>100% money-back <br> guarantee</p>
+        </div>
+      </div>
+      <div class="accordion__item">
+        <div class="accordion__advantages2">
+          <img class="accordion__img" src="images/guarantee.png" alt="">
+          <p>1 year warranty, <br> no questions asked</p>
+        </div>
+      </div>
     </div>
   </div>
   <section class="sectionPresentation">
