--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <!-- </a> -->
     </div>
   </div>
-  <div class="container"
+  <div class="container mobb"
     style="background: linear-gradient(1turn,#cc1e3b -44.49%,#ff8646 157.84%); border-radius: 10px;">
     <div class="accordion"
       style="display: flex; flex-wrap: wrap;justify-content: space-between; background: transparent; color: white;padding: 20px; ">
