--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section class="sectionSwiper">
         <div class="nav__items">
           <div class="nav__block">
-            <img src="images/logo.svg" alt="" class="">
+            <img src="images/logo.svg" style="width: 200px;" alt="" class="">
           </div>
           <div style="display: flex; align-items: center; gap:10px">
 
@@ -63,23 +63,31 @@
 
           <div class="swiper-wrapper" style="text-align: center;">
             <div class="swiper-slide swiper-slide-2">
-              <img src="images/slide1.webp" alt="" class="swiper-img" style="border-radius: 0 0 1.25rem 1.25rem;">
+              <!-- <img src="images/slide1.webp" alt="" class="swiper-img" style="border-radius: 0 0 1.25rem 1.25rem;"> -->
+              <img src="images/LC_20200204_HL_PS_FS_21178251702430_001.png" alt="" class="swiper-img"
+                style="border-radius: 0 0 1.25rem 1.25rem;">
             </div>
             <div class="swiper-slide swiper-slide-3">
-              <img src="images/slide2.webp" alt="" class="swiper-img" style="border-radius: 0 0 1.25rem 1.25rem;">
+              <!-- <img src="images/slide2.webp" alt="" class="swiper-img" style="border-radius: 0 0 1.25rem 1.25rem;"> -->
+              <img src="images/LC_20200204_HL_PS_FS_21178251702430_002.png" alt="" class="swiper-img"
+                style="border-radius: 0 0 1.25rem 1.25rem;">
             </div>
             <div class="swiper-slide swiper-slide-4">
-              <img src="images/slide3.webp" alt="" class="swiper-img" style="border-radius: 0 0 1.25rem 1.25rem;">
+              <!-- <img src="images/slide3.webp" alt="" class="swiper-img" style="border-radius: 0 0 1.25rem 1.25rem;"> -->
+              <img src="images/LC_20200204_HL_PS_FS_21178251702430_004.png" alt="" class="swiper-img"
+                style="border-radius: 0 0 1.25rem 1.25rem;">
             </div>
-            <div class="swiper-slide swiper-slide-5">
+            <!-- <div class="swiper-slide swiper-slide-5">
               <video src="media/slide1.mp4" class="swiper-img" muted="" loop="" autoplay="" playsinline=""></video>
-            </div>
+            </div> -->
             <div class="swiper-slide swiper-slide-6">
-              <img src="images/slide4.webp" alt="" class="swiper-img" style="border-radius: 0 0 1.25rem 1.25rem;">
+              <!-- <img src="images/slide4.webp" alt="" class="swiper-img" style="border-radius: 0 0 1.25rem 1.25rem;"> -->
+              <img src="images/LC_20200521_AD_CI_DA_OVALCASS000001_048.png" alt="" class="swiper-img"
+                style="border-radius: 0 0 1.25rem 1.25rem;">
             </div>
-            <div class="swiper-slide swiper-slide-7">
+            <!-- <div class="swiper-slide swiper-slide-7">
               <img src="images/slide5.webp" alt="" class="swiper-img" style="border-radius: 0 0 1.25rem 1.25rem;">
-            </div>
+            </div> -->
           </div>
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
@@ -162,6 +170,9 @@
 
     <!-- <p class="inf__text">Free Delivery to the USA 🇺🇸</p> -->
     <div class="limited">
+      <span>
+        Limited Offer
+      </span>
       <span class="timer" id="timer">00:21:16</span>
     </div>
     <div class="chooseCard">
@@ -248,7 +259,8 @@
           <div class="advantagesDesc__text_desc">Experience Nike Air Force 1s, a legendary design transformed from
             tradition. Crafted with innovation and style, these iconic sneakers pay homage to their roots while
             embracing a modern aesthetic.</div>
-          <img src="images/pic1.webp" alt="" class="header__slider_image">
+          <!-- <img src="images/pic1.webp" alt="" class="header__slider_image"> -->
+          <img src="images/LC_20200204_HL_PS_FS_21178251702430_001.png" alt="" class="header__slider_image">
         </div>
       </div>
       <div class="advantagesDesc__text">
@@ -257,7 +269,8 @@
           <div class="advantagesDesc__text_desc">Step into the heritage of Nike Air Force 1s, where every pair is
             wrapped in the iconic legacy of the swoosh. The timeless design speaks volumes, offering a symbol of status
             and style that stands the test of time.</div>
-          <img src="images/pic2.webp" alt="" class="header__slider_image">
+          <!-- <img src="images/pic2.webp" alt="" class="header__slider_image"> -->
+          <img src="images/2024_H1_Rhone_ColourLaunch_960x540_1-1706776442.jpeg" alt="" class="header__slider_image">
         </div>
       </div>
       <div class="advantagesDesc__text">
@@ -266,7 +279,8 @@
           <div class="advantagesDesc__text_desc">Unleash the power of timeless comfort with Nike Air Force 1s. Featuring
             a cushioned midsole and breathable design, these sneakers prioritize your comfort, ensuring each step is as
             legendary as the last.</div>
-          <img src="images/pic3.webp" alt="" class="header__slider_image">
+          <!-- <img src="images/pic3.webp" alt="" class="header__slider_image"> -->
+          <img src="images/LC_20200204_HL_PS_FS_21178251702430_002.png" alt="" class="header__slider_image">
         </div>
       </div>
     </div>
@@ -409,7 +423,8 @@
       </div> -->
       <div class="riviews">
         <div class="review">
-          <img class="review__img" src="images/comment1.webp" alt="">
+          <!-- <img class="review__img" src="images/comment1.webp" alt=""> -->
+          <img class="review__img" src="images/LC_20200521_AD_CI_DA_OVALCASS000001_048.png" alt="">
           <div class="review__block">
             <div class="review__block_name">Jared</div>
             <div class="review__block_rate">
@@ -440,7 +455,8 @@
           </div>
         </div>
         <div class="review">
-          <img class="review__img" src="images/comment2.webp" alt="">
+          <!-- <img class="review__img" src="images/comment2.webp" alt=""> -->
+          <img class="review__img" src="images/LC_20200204_HL_PS_FS_21178251702430_004.png" alt="">
           <div class="review__block">
             <div class="review__block_name">Shawn B</div>
             <div class="review__block_rate">
@@ -470,7 +486,8 @@
                     </div>
                 </div> -->
         <div class="review">
-          <img class="review__img" src="images/comment3.webp" alt="">
+          <!-- <img class="review__img" src="images/comment3.webp" alt=""> -->
+          <img class="review__img" src="images/LC_20200204_HL_PS_FS_21178251702430_005.png" alt="">
           <div class="review__block">
             <div class="review__block_name">Michael Svenson</div>
             <div class="review__block_rate">
@@ -485,7 +502,8 @@
           </div>
         </div>
         <div class="review">
-          <img class="review__img" src="images/comment8.webp" alt="">
+          <!-- <img class="review__img" src="images/comment8.webp" alt=""> -->
+          <img class="review__img" src="images/81eeb76c-3d51-54d0-b416-d2583c751f2b.jpeg" alt="">
           <div class="review__block">
             <div class="review__block_name">Leo</div>
             <div class="review__block_rate">
@@ -604,7 +622,7 @@
               <a href="#" class="footer__info_btn">Read more</a>
             </div> -->
         <div class="footer__info_nav">
-          <img src="images/logo.webp" alt="">
+          <!-- <img src="images/logo.webp" alt=""> -->
           <span>© 2023 Foot Locker</span>
         </div>
         <!-- <p class="message">
@@ -689,7 +707,7 @@
     <div class="nav__items">
       <div class="nav__block">
         <img class="JS__closeModals" src="images/close.svg" alt="">
-        <img src="images/logonav.webp" alt="" class="">
+        <img src="images/logo.svg" alt="" class="">
       </div>
       <div class="nav__items_cart">
         <img class="JS__openCartModal" src="images/Cart White.png" alt="">
