--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
           right: 21px;" alt="">
 
           <div class="swiper-wrapper" style="text-align: center;">
-            <div class="swiper-slide swiper-slide-2">
-              <!-- <img src="images/slide1.webp" alt="" class="swiper-img" style="border-radius: 0 0 1.25rem 1.25rem;"> -->
+            <!-- <div class="swiper-slide swiper-slide-2">
+              <img src="images/slide1.webp" alt="" class="swiper-img" style="border-radius: 0 0 1.25rem 1.25rem;">
               <img src="images/LC_20200204_HL_PS_FS_21178251702430_001.png" alt="" class="swiper-img"
                 style="border-radius: 0 0 1.25rem 1.25rem;">
-            </div>
+            </div> -->
             <div class="swiper-slide swiper-slide-3">
               <!-- <img src="images/slide2.webp" alt="" class="swiper-img" style="border-radius: 0 0 1.25rem 1.25rem;"> -->
               <img src="images/LC_20200204_HL_PS_FS_21178251702430_002.png" alt="" class="swiper-img"
@@ -82,7 +82,7 @@
             </div> -->
             <div class="swiper-slide swiper-slide-6">
               <!-- <img src="images/slide4.webp" alt="" class="swiper-img" style="border-radius: 0 0 1.25rem 1.25rem;"> -->
-              <img src="images/LC_20200521_AD_CI_DA_OVALCASS000001_048.png" alt="" class="swiper-img"
+              <img src="images/LC_20200204_HL_PS_FS_21178251702430_001.png" alt="" class="swiper-img"
                 style="border-radius: 0 0 1.25rem 1.25rem;">
             </div>
             <!-- <div class="swiper-slide swiper-slide-7">
